
5.1.0 -> 5.2a0:
    - jbj: print last problem added w platform affinity failure.
    - jbj: lazily create ts problem set.
    - jbj: selinux: resurrect lsetfilecon using libselinux API.
    - jbj: use macro, not /bin/bash, in scriptlet_requires.
    - jbj: don't run empty transactions, avoiding obscure error msg.
    - jbj: permit a negative index as alias for the last problem added to set.
    - jbj: warn if package is not added because of platform affinity patterns.
    - proyvind: lzdio: fix build with recent api changes.
    - jbj: fix: initialize next element of rpmlog store correctly.
    - rpm.org: python: cleanup & exit callback immediately on error.
    - jbj: add FNM_EXTMATCH to default flags w RPMMIRE_GLOB.
    - jbj: update {nl,id,pl}.po (Translation Project).
    - jbj: rpmio: permit adler32/crc32/crc64 in spite of --without-zlib.
    - jbj: rpmio: eliminate HAVE_ZLIB_H tests, use WITH_ZLIB tests instead.
    - rse: rpmio: allow newer fnmatch to build on non-Linux platforms, too.
    - jbj: rpmio: upgrade  fnmatch to version that implements FNM_EXTMATCH.
    - jbj: rpmpsm: simplify runTriggers() by adding rpmTriggersLoop().
    - jbj: rpmpsm: extract trigger tags once, simplify code, consistent naming.
    - jbj: rpmpsm: extract NVRA and INSTALLPREFIXES lazily & persistently.
    - jbj: speed up dirname triggers from glob patterns. almost spiffy ...
    - jbj: rpmdb: add rpmdbMireApply to retrieve primary keys from index.
    - jbj: fire dirname triggers from glob patterns (pig slow, fixing todo++).
    - jbj: rpmfi: add storage and getters for exclude/include patterns.
    - jbj: rpmds: add storage and getters for exclude/include patterns.
    - jbj: rpmpsm: retrieve triggers lazily.
    - jbj: use parent dirnames index if triggername ends with '/'.
    - jbj: fire triggers on package file paths.
    - jbj: use rpmio Readlink everywhere consistently.
    - rpm.org: fix error messages in processScriptFiles().